--- a/app/src/main/res/layout/activity_currency_detail.xml
+++ b/app/src/main/res/layout/activity_currency_detail.xml
@@ -9,6 +9,7 @@
     <TabHost
         android:id="@+id/DetailTab"
         android:layout_width="match_parent"
+        android:background="@color/colorPrimary"
         android:layout_height="match_parent">
 
         <LinearLayout
@@ -35,35 +36,42 @@
 
                     <TextView
                         android:id="@+id/CurrencyPrice"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="304dp"
+                        android:layout_height="20dp"
                         android:layout_alignParentTop="true"
                         android:layout_toEndOf="@+id/PriceTime"
-                        android:text="TextView" />
+                        android:background="@color/colorPrimaryDark"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorText"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/PriceTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="80dp"
+                        android:layout_height="20dp"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:text="TextView" />
+                        android:background="@color/colorPrimaryDark"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/colorText"
+                        android:textStyle="bold" />
 
                     <com.github.mikephil.charting.charts.CandleStickChart
 
                         android:id="@+id/CurrencyChart"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:layout_marginTop="20dp">
+                        android:layout_marginTop="20dp"
+                        android:background="@color/colorPrimaryDark">
 
                     </com.github.mikephil.charting.charts.CandleStickChart>
 
                     <com.github.mikephil.charting.charts.BarChart
                         android:id="@+id/VolumeChart"
                         android:layout_width="match_parent"
-                        android:background="@color/colorPrimaryDark"
                         android:layout_height="100dp"
-                        android:layout_marginTop="220dp">
+                        android:layout_marginTop="220dp"
+                        android:background="@color/colorPrimaryDark">
 
                     </com.github.mikephil.charting.charts.BarChart>
 
@@ -71,10 +79,10 @@
                         android:id="@+id/MACD"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:layout_marginTop="320dp">
+                        android:layout_marginTop="320dp"
+                        android:background="@color/colorPrimaryDark">
 
                     </com.github.mikephil.charting.charts.CombinedChart>
-
 
                 </RelativeLayout>
 
