--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -13,6 +13,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignBottom="@+id/checkFavorite"
+        android:background="#00000000"
         android:layout_alignParentStart="true"
         android:layout_marginStart="10dp"
         android:contentDescription="Cream"
