--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="TickerNameColor">#d0ff00</color>
     <color name="colorBorder">#838383</color>
     <color name="PrimaryNew">#123456</color>
+    <color name="Transparent">#20828282</color>
 </resources>
