--- a/app/src/main/res/layout/currency_widget.xml
+++ b/app/src/main/res/layout/currency_widget.xml
@@ -1,17 +1,18 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Transparent"
+    android:gravity="center_vertical|center_horizontal"
+    android:orientation="vertical"
     android:padding="@dimen/widget_margin">
 
     <TextView
         android:id="@+id/appwidget_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:contentDescription="@string/appwidget_text"
-        android:text="Bitcoin"
+        android:textAlignment="center"
         android:textColor="@color/TickerNameColor"
         android:textSize="15sp"
         android:textStyle="bold|italic" />
@@ -20,26 +21,23 @@
         android:id="@+id/WidgetPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/appwidget_text"
-        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/TickerNameColor"
         android:textSize="12sp" />
 
     <TextView
         android:id="@+id/WidgetChange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/WidgetPrice"
-        android:text="TextView"
+        android:textAlignment="center"
         android:textSize="12sp" />
 
-    <Button
-        android:id="@+id/widgetRefresh"
+    <TextView
+        android:id="@+id/widgetLast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/WidgetChange"
-        android:layout_toEndOf="@+id/WidgetPrice"
-        android:text="Button" />
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="12sp" />
 
-</RelativeLayout>
+</LinearLayout>
