--- a/app/src/main/res/xml/currency_widget_info.xml
+++ b/app/src/main/res/xml/currency_widget_info.xml
@@ -8,4 +8,4 @@
     android:previewImage="@drawable/example_appwidget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen|keyguard"></appwidget-provider>
