--- a/app/src/main/res/layout/activity_currency_detail.xml
+++ b/app/src/main/res/layout/activity_currency_detail.xml
@@ -38,10 +38,13 @@
 
                     <ImageView
                         android:id="@+id/VaultLogo"
-                        android:layout_width="69dp"
+                        android:layout_width="0dp"
                         android:layout_height="60dp"
-                        android:layout_marginStart="50dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
+                        app:layout_constraintEnd_toStartOf="@+id/VaultName"
+                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/cream" />
@@ -64,8 +67,10 @@
                         android:id="@+id/NumberCoins"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="50dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="25dp"
                         android:text="TextView"
+                        android:textColor="@color/TickerNameColor"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/VaultLogo" />
 
@@ -85,6 +90,7 @@
                         android:layout_marginEnd="20dp"
                         android:layout_marginStart="8dp"
                         android:text="TextView"
+                        android:textColor="@color/TickerNameColor"
                         app:layout_constraintBaseline_toBaselineOf="@+id/CoinsNumberLabel"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/CoinsNumberLabel" />
@@ -103,23 +109,26 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/VaultCurrentPrice" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/VaultBuyCoinsAmount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginTop="24dp"
-                        android:text="TextView"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginTop="25dp"
+                        android:hint="# to Buy"
+                        android:inputType="numberDecimal"
+                        app:layout_constraintEnd_toStartOf="@+id/VaultBuyCoinsPrice"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/view" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/VaultBuyCoinsPrice"
-                        android:layout_width="75dp"
-                        android:layout_height="20dp"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
-                        android:hint="@ Price"
+                        android:hint="Price to Buy"
+                        android:inputType="numberDecimal"
                         app:layout_constraintBaseline_toBaselineOf="@+id/VaultBuyCoinsAmount"
                         app:layout_constraintEnd_toStartOf="@+id/VaultBuyCoinsBtn"
                         app:layout_constraintStart_toEndOf="@+id/VaultBuyCoinsAmount" />
@@ -127,62 +136,68 @@
                     <Button
                         android:id="@+id/VaultBuyCoinsBtn"
                         style="@android:style/Widget.Holo.Button"
-                        android:layout_width="80dp"
+                        android:layout_width="0dp"
                         android:layout_height="35dp"
-                        android:layout_marginEnd="25dp"
+                        android:layout_marginStart="50dp"
                         android:text="Buy"
                         android:textSize="14sp"
                         app:layout_constraintBaseline_toBaselineOf="@+id/VaultBuyCoinsPrice"
-                        app:layout_constraintEnd_toEndOf="parent" />
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/VaultBuyCoinsPrice" />
 
                     <TextView
                         android:id="@+id/VaultInvested"
-                        android:layout_width="75dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="30dp"
                         android:text="TextView"
                         android:textColor="@color/TickerNameColor"
+                        app:layout_constraintEnd_toStartOf="@+id/VaultTotal"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/CoinsNumberLabel" />
 
                     <TextView
                         android:id="@+id/VaultTotal"
-                        android:layout_width="75dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="60dp"
                         android:text="TextView"
                         android:textColor="@color/TickerNameColor"
                         app:layout_constraintBaseline_toBaselineOf="@+id/VaultInvested"
+                        app:layout_constraintEnd_toStartOf="@+id/VaultNet"
                         app:layout_constraintStart_toEndOf="@+id/VaultInvested" />
 
                     <TextView
                         android:id="@+id/VaultNet"
-                        android:layout_width="75dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:text="TextView"
                         android:textColor="@color/TickerNameColor"
                         app:layout_constraintBaseline_toBaselineOf="@+id/VaultTotal"
-                        app:layout_constraintEnd_toEndOf="parent" />
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/VaultTotal" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/VaultSellCoinsAmount"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="50dp"
+                        android:layout_marginEnd="40dp"
                         android:layout_marginTop="25dp"
-                        android:text="TextView"
+                        android:hint="# to Sell"
+                        android:inputType="numberDecimal"
+                        app:layout_constraintEnd_toStartOf="@+id/VaultSellCoinsPrice"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/VaultBuyCoinsAmount" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/VaultSellCoinsPrice"
-                        android:layout_width="75dp"
-                        android:layout_height="20dp"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
-                        android:hint="@ Price"
+                        android:hint="Price to Sell"
+                        android:inputType="numberDecimal"
                         app:layout_constraintBaseline_toBaselineOf="@+id/VaultSellCoinsAmount"
                         app:layout_constraintEnd_toStartOf="@+id/VaultSellCoinsBtn"
                         app:layout_constraintStart_toEndOf="@+id/VaultSellCoinsAmount" />
@@ -190,17 +205,18 @@
                     <Button
                         android:id="@+id/VaultSellCoinsBtn"
                         style="@android:style/Widget.Holo.Button"
-                        android:layout_width="80dp"
+                        android:layout_width="0dp"
                         android:layout_height="35dp"
-                        android:layout_marginEnd="24dp"
+                        android:layout_marginStart="50dp"
                         android:text="Sell"
                         android:textSize="14sp"
                         app:layout_constraintBaseline_toBaselineOf="@+id/VaultSellCoinsPrice"
-                        app:layout_constraintEnd_toEndOf="parent" />
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/VaultSellCoinsPrice" />
 
                     <View
                         android:id="@+id/view2"
-                        android:layout_width="344dp"
+                        android:layout_width="0dp"
                         android:layout_height="5dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
@@ -229,30 +245,32 @@
 
                     <TextView
                         android:id="@+id/InvestedLbl"
-                        android:layout_width="75dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:text="Invested"
                         app:layout_constraintBottom_toTopOf="@+id/VaultInvested"
+                        app:layout_constraintEnd_toStartOf="@+id/VaultCoinLbl"
                         app:layout_constraintStart_toStartOf="parent" />
 
                     <TextView
                         android:id="@+id/VaultCoinLbl"
-                        android:layout_width="75dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="60dp"
                         android:text="Total"
                         app:layout_constraintBottom_toTopOf="@+id/VaultTotal"
+                        app:layout_constraintEnd_toStartOf="@+id/VaultNetLbl"
                         app:layout_constraintStart_toEndOf="@+id/InvestedLbl" />
 
                     <TextView
                         android:id="@+id/VaultNetLbl"
-                        android:layout_width="75dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:text="Net"
                         app:layout_constraintBottom_toTopOf="@+id/VaultNet"
-                        app:layout_constraintEnd_toEndOf="parent" />
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/VaultCoinLbl" />
 
                     <TextView
                         android:id="@+id/textView5"
@@ -261,16 +279,18 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:text="Invested"
+                        android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/VaultTotalAssetsLbl" />
 
                     <TextView
                         android:id="@+id/VaultsInvested"
-                        android:layout_width="75dp"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:text="TextView"
                         android:textColor="@color/TickerNameColor"
+                        android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -280,16 +300,18 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="60dp"
                         android:text="Total"
+                        android:textSize="18sp"
                         app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                         app:layout_constraintStart_toEndOf="@+id/textView5" />
 
                     <TextView
                         android:id="@+id/VaultsTotal"
-                        android:layout_width="75dp"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="60dp"
+                        android:layout_marginStart="35dp"
                         android:text="TextView"
                         android:textColor="@color/TickerNameColor"
+                        android:textSize="18sp"
                         app:layout_constraintBaseline_toBaselineOf="@+id/VaultsInvested"
                         app:layout_constraintStart_toEndOf="@+id/VaultsInvested" />
 
@@ -299,47 +321,78 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:text="Net"
+                        android:textSize="18sp"
                         app:layout_constraintBaseline_toBaselineOf="@+id/VaultsTotalLbl"
                         app:layout_constraintEnd_toEndOf="parent" />
 
                     <TextView
                         android:id="@+id/VaultsNet"
-                        android:layout_width="75dp"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:text="TextView"
                         android:textColor="@color/TickerNameColor"
+                        android:textSize="18sp"
                         app:layout_constraintBaseline_toBaselineOf="@+id/VaultsTotal"
                         app:layout_constraintEnd_toEndOf="parent" />
 
                     <TextView
                         android:id="@+id/textView11"
-                        android:layout_width="75dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="28dp"
                         android:layout_marginStart="16dp"
-                        android:layout_marginTop="32dp"
                         android:text="Liquid USD Available: "
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/VaultsInvested" />
+                        android:textSize="18sp"
+                        app:layout_constraintBaseline_toBaselineOf="@+id/VaultLiquid"
+                        app:layout_constraintEnd_toStartOf="@+id/VaultLiquid"
+                        app:layout_constraintStart_toStartOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView12"
-                        android:layout_width="100dp"
+                        android:id="@+id/VaultLiquid"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="28dp"
+                        android:layout_marginTop="50dp"
                         android:text="TextView"
                         android:textColor="@color/TickerNameColor"
+                        android:textSize="18sp"
+                        app:layout_constraintEnd_toStartOf="@+id/VaultAddFunds"
                         app:layout_constraintStart_toEndOf="@+id/textView11"
-                        tools:layout_editor_absoluteY="396dp" />
+                        app:layout_constraintTop_toBottomOf="@+id/VaultsTotal" />
 
                     <Button
-                        android:id="@+id/button2"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/VaultAddFunds"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
                         android:layout_marginStart="24dp"
                         android:text="Add Funds"
-                        app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
-                        app:layout_constraintStart_toEndOf="@+id/textView12" />
+                        app:layout_constraintBaseline_toBaselineOf="@+id/VaultLiquid"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/VaultLiquid" />
+
+                    <Button
+                        android:id="@+id/MainVault"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:text="Go to Main Vault"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/VaultLiquid" />
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="Current Price"
+                        app:layout_constraintBaseline_toBaselineOf="@+id/VaultCurrentPrice"
+                        app:layout_constraintStart_toEndOf="@+id/VaultCurrentPrice" />
 
                 </android.support.constraint.ConstraintLayout>
 
